@@ -72,9 +72,9 @@ use [?] or [.] patterns to check "?" and "." signs in the text.
 
 == Multiple suggestions ==
 
-Use \n (new line) in the replacement text to add multiple suggestions:
+Use | or \n (new line) in the replacement text to add multiple suggestions:
 
-foo -> Foo\nFOO\nBar\nBAR # Did you mean:
+foo -> Foo|FOO|Bar|BAR # Did you mean:
 
 (Foo, FOO, Bar and BAR suggestions for the input word "foo")
 
@@ -100,9 +100,9 @@ foobar -> _ # Message
 
 == Longer explanations ==
 
-Warning messages can contain optional URLs for longer explanations separated by "\n":
+Warning messages can contain optional URLs for longer explanations separated by "|" or "\n":
 
-(your|her|our|their)['’]s -> \1s # Possessive pronoun: \n http://en.wikipedia.org/wiki/Possessive_pronoun
+(your|her|our|their)['’]s -> \1s # Possessive pronoun:|http://en.wikipedia.org/wiki/Possessive_pronoun
 
 == Back references in explanations ==
 
@@ -148,21 +148,21 @@ D \d{1,3}	# 1, 2 or 3 digits
 
 # rules
 # ISO thousand marker: space, here: no-break space (U+00A0)
-{d2}{d} -> {d2},{d}\n{d2} {d}           # Use thousand marker (common or ISO).
-{D}{d}{d} -> {D},{d},{d}\n{D} {d} {d}   # Use thousand markers (common or ISO).
+{d2}{d} -> {d2},{d}|{d2} {d}           # Use thousand marker (common or ISO).
+{D}{d}{d} -> {D},{d},{d}|{D} {d} {d}   # Use thousand markers (common or ISO).
 
 Note: Lightproof uses named groups for name definitions and
 their references, adding a hidden number to the group names
 in the form of "_n". You can use these explicit names in the replacement:
 
-{d2}{d} -> {d2_1},{d_1}\n{d2_1} {d_1}	# Use thousand marker (common or ISO).
-{D}{d}{d} -> {D_1},{d_1},{d_2}\n{D_1} {d_1} {d_2} # Use thousand markers (common or ISO).
+{d2}{d} -> {d2_1},{d_1}|{d2_1} {d_1}	# Use thousand marker (common or ISO).
+{D}{d}{d} -> {D_1},{d_1},{d_2}|{D_1} {d_1} {d_2} # Use thousand markers (common or ISO).
 
 Note: back references of name definitions are zeroed after new line
 characters, see this and the following example:
 
 E ( |$)                       # name definition: space or end of sentence
-"\b[.][.]{E}" -> .{E}\n…{E}   # Period or ellipsis?
+"\b[.][.]{E}" -> .{E}|…{E}   # Period or ellipsis?
 
 See src/en/en.dat for more examples.
 
